2009-08-27  6.5.5-3 Cristy  <quetzlzacatenango@image...>
  * Added MagickSetOpacity/MagickGetOpacity.

2009-07-27  6.5.4-7 Cristy  <quetzlzacatenango@image...>
  * Added MagickSetBorderColor/MagickGetBorderColor.

2009-04-27  6.5.1-9 Cristy  <quetzlzacatenango@image...>
  * Added MagickSetImageFuzz/MagickGetImageFuzz.

2009-03-08  6.4.9-10 Mikko  <mkoppanen@php...>
  * Added DrawGet/SetTextKerning and DrawGet/SetInterWordSpacing.

2008-11-27  6.4.6-7 Cristy  <quetzlzacatenango@image...>
  * MagickSetVirtualPixelMethod() now properly sets and returns the
    virtual pixel method.

2008-11-03  6.4.5-4 Cristy  <quetzlzacatenango@image...>
  * Do not filter drawing commands.

2008-10-27  6.4.5-1 Cristy  <quetzlzacatenango@image...>
  * Add MagickSparseColorImage() API method.
    
2008-02-23  6.3.9-0 Cristy  <quetzlzacatenango@image...>
  * Patch MagickReadImageBlob() to support Postscript which does not have
    native blob support.

2008-01-28  6.3.8-3 Cristy  <quetzlzacatenango@image...>
  * Return wand->images->depth for MagickGetImageDepth();

2008-01-10  6.3.7-10 Cristy  <quetzlzacatenango@image...>
  * Inherit image exception *before* destroying the cloned image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=10415).

2007-11-27  6.3.7-2 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in MagickSetImageProfile() (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=10197).

2007-11-06  6.3.6-10 Cristy  <quetzlzacatenango@image...>
  * New MagickSetImageAlphaChannel() method to activate, deactivate, reset, or
	  set the image alpha channel.

2007-10-27  6.3.6-4 Cristy  <quetzlzacatenango@image...>
  * Added get/set font and pointsize methods to magick-property.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=6&t=9997).

2007-09-10  6.3.5-9 Cristy  <quetzlzacatenango@image...>
  * Added MagickGetImageProperties(), MagickGetImageOptions(), and