@@ -1,3 +1,9 @@
+2009-10-10  6.5.6-10 Cristy  <quetzlzacatenango@image...>
+  * Add MagickSetImageArtifact(), etc.  Wand artifacts are like properties
+    except they are not exported.  They are needed for some method such
+    as setting compose:args for the composite DisplaceCompositeOp compose
+    operator.
+
 2009-08-27  6.5.5-3 Cristy  <quetzlzacatenango@image...>
   * Added MagickSetOpacity/MagickGetOpacity.
 
